--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-loader-spinner": "^3.1.0",
     "axios": "^0.19.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-loading": "^2.0.3",
-    "react-scripts": "3.1.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-loader-spinner": "^3.1.5",
+    "react-scripts": "^3.3.0",
     "typescript": "3.6.2"
   },
   "scripts": {
