--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "@babel/cli": "^7.11.6",
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.2",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "@types/react-loader-spinner": "^3.1.0",
-    "axios": "^0.19.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-loader-spinner": "^3.1.5",
-    "react-scripts": "^3.3.0",
-    "typescript": "3.6.2"
+    "@babel/cli": "7.12.10",
+    "@types/jest": "26.0.20",
+    "@types/node": "14.14.22",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/react-loader-spinner": "3.1.3",
+    "axios": "0.21.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-loader-spinner": "3.1.14",
+    "react-scripts": "4.0.1",
+    "typescript": "4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
