--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "laikas",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": true,
   "dependencies": {
-    "@babel/cli": "7.12.10",
-    "@types/jest": "26.0.20",
-    "@types/node": "14.14.22",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/react-loader-spinner": "3.1.3",
-    "axios": "0.21.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-loader-spinner": "3.1.14",
-    "react-scripts": "4.0.1",
-    "typescript": "4.1.3"
+    "@babel/cli": "7.15.4",
+    "@types/jest": "27.0.1",
+    "@types/node": "16.9.2",
+    "@types/react": "17.0.21",
+    "@types/react-dom": "17.0.9",
+    "@types/react-loader-spinner": "4.0.0",
+    "axios": "0.21.4",
+    "dotenv": "10.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-loader-spinner": "4.0.0",
+    "react-scripts": "4.0.3",
+    "typescript": "4.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
